<resources>
    <string name="app_name">NumberGuesser</string>
    <string name="_0">0</string>
    <string name="new_game">New Game</string>
    <string name="tap_guess">Tap Guess</string>
    <string name="send">send</string>
    <string name="best_score">Best Score</string>
    <string name="input_number_between_0_and_20">Input number between 0 and 20</string>
    <string name="number_guesser">Number Guesser</string>
</resources>
