<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/counterField"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="35dp"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toTopOf="@+id/guessField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGame"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/statisticsOutput"
        android:layout_width="53dp"
        android:layout_height="84dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="67dp"
        android:text=" "
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statistics"
        app:layout_constraintTop_toBottomOf="@+id/sendGuess" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="271dp"
        android:layout_height="59dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/guessField"
        android:layout_width="194dp"
        android:layout_height="65dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tap_guess"
        app:layout_constraintBottom_toTopOf="@+id/sendGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterField" />

    <Button
        android:id="@+id/sendGuess"
        android:layout_width="137dp"
        android:layout_height="57dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="63dp"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/statisticsOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessField" />

    <TextView
        android:id="@+id/statistics"
        android:layout_width="126dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="90dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:cursorVisible="true"
        android:text="@string/best_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statisticsOutput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendGuess"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="156dp"
        android:layout_height="144dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="35dp"
        android:text="@string/new_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guessField"
        app:layout_constraintEnd_toStartOf="@+id/counterField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGame" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="34dp"
        android:text="@string/input_number_between_0_and_20"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="12dp"
        android:text="@string/number_guesser"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 